@@ -20,7 +20,7 @@ dnl Copyright (C) 1996 John W. Eaton
 ### along with Octave; see the file COPYING.  If not, write to the Free
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-AC_REVISION($Revision: 1.222 $)
+AC_REVISION($Revision: 1.223 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -691,11 +691,12 @@ fi
 
 ### Checks for functions and variables.
 
-AC_CHECK_FUNCS(atexit bcopy bzero dup2 execvp fcntl fork getcwd \
-	       gethostname getpgrp getpid getppid lstat memmove \
-	       mkdir mkfifo on_exit pipe putenv rename rindex rmdir \
-	       setvbuf sigaction sigpending sigprocmask sigsuspend \
-	       stat strcasecmp strdup strerror stricmp strncasecmp \
+AC_CHECK_FUNCS(atexit bcopy bzero dup2 endpwent execvp fcntl fork \
+	       getcwd gethostname getpgrp getpid getppid getpwent \
+	       getpwnam getpwuid lstat memmove mkdir mkfifo on_exit \
+	       pipe putenv rename rindex rmdir setpwent setvbuf \
+	       sigaction sigpending sigprocmask sigsuspend stat \
+	       strcasecmp strdup strerror stricmp strncasecmp \
 	       strnicmp tempnam umask unlink vfprintf vsprintf \
 	       waitpid)
 
