@@ -1,3 +1,15 @@
+Sat Nov  2 20:44:55 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Makefile.in (DLD_SRC): Move time.cc and getrusage.cc here from
+	SOURCES.  Add getpwent.cc.
+
+	* getrusage.cc: Rename from resource.cc.  Make getrusage a
+	loadable function.
+
+	* time.cc: Rename from timefns.cc.  Make time functions loadable.
+
+	* getpwent.cc: New file.
+
 Wed Oct 30 01:06:19 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Version 1.90.
